tests/ui/derive-invariant/helper-wrong-expr/expected
error[E0308]: mismatched types
  --> /home/ubuntu/kani/tests/ui/derive-invariant/helper-wrong-expr/helper-wrong-expr.rs:14:22
   |
14 |     #[invariant(x >= 0)]
   |                      ^ expected `&i32`, found integer
   |
help: consider dereferencing the borrow
   |
14 |     #[invariant(*x >= 0)]
   |                 +